--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,12 +27,12 @@ limitations under the License.
 		<link href="./css/dsamc-svg.css" rel="stylesheet" />
 
 		<!-- JavaScript - jQuery -->
-		<script src="./js/lib/jquery-1.10.2.min.js" type="text/javascript"></script>
+		<script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 		<!-- JavaScript - Bootstrap -->
 		<script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 		<!-- JavaScript - D3 -->
-		<!--<script src="./js/lib/d3.v3.min.js" type="text/javascript"></script>-->
-		<script src="./js/lib/d3.v3.js" type="text/javascript"></script>
+		<!--<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>-->
+		<script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
 
 		<script type="text/javascript">
             $(function() {
