--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -15,116 +15,114 @@ limitations under the License.
 -->
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>The CloudDSF : : The Cloud Decision Support Framework</title>
+<head>
+<meta charset="UTF-8">
+<title>The CloudDSF : : The Cloud Decision Support Framework</title>
 
-		<!-- Style Sheets - Bootstrap -->
-		<link href="./css/bootstrap.min.css" rel="stylesheet" />
+<!-- Style Sheets - Bootstrap -->
+<link href="./css/bootstrap.min.css" rel="stylesheet" />
 
-		<!-- Style Sheets - DSAMC -->
-		<link href="./css/dsamc-layout.css" rel="stylesheet" />
+<!-- Style Sheets - DSAMC -->
+<link href="./css/dsamc-layout.css" rel="stylesheet" />
 
-		<!-- JavaScript - jQuery -->
-		<script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
-		<!-- JavaScript - Bootstrap -->
-		<script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
+<!-- JavaScript - jQuery -->
+<script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
+<!-- JavaScript - Bootstrap -->
+<script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 
-	</head>
-	<body>
-		<div id="pageWrapper">
+</head>
+<body>
+	<div id="pageWrapper">
 
-			<div id="headerWrapper">
-				<div id="headerBox">
-					<div class="container">
-						<ul id="headerNav">
-							<li><a class="brandName" href="./">The CloudDSF</a></li>
-							<li><a class="active" href="./">
-								<span class="glyphicon glyphicon-home"></span>
-								<span>Home</span>
-							</a></li>
-							<li><a href="./cloudDSFVisualization.html">
-								<span class="glyphicon glyphicon-picture"></span>
-								<span>Prototypical Implementation</span>
-							</a></li>
-							<li><a href="./about.html">
-								<span class="glyphicon glyphicon-flag"></span>
-								<span>About</span>
-							</a></li>
-						</ul>
-						<div class="clearfix"></div>
-					</div>
-				</div>
-			</div>
-			<div id="mainWrapper">
-				<div id="mainBox" class="sizeMarginBox">
-
-					<div class="container">
-						<div class="jumbotron">
-							<h1>The Cloud Decision Support Framework</h1>
-							<p>
-								The Cloud Decision Support Framework (CloudDSF) helps decision makers, who consider the migration of an existing application to the Cloud.
-							</p>
-							<p>
-								<a href="./cloudDSFVisualization.html" class="btn btn-primary btn-lg" role="button">Prototypical Implementation</a>
-							</p>
-						</div>
-					</div>
-
-					<div class="container centered">
-						<img src="./img/layout/titleImage.png" alt="CloudDSF Title Images" />
-					</div>
-
-					<div class="container">
-						<div class="row">
-							<div class="col-md-5">
-								<h3>Main Approach</h3>
-								<p>
-									The CloudDSF is based on 
-									<a href="http://www.iaas.uni-stuttgart.de/RUS-data/INPROC-2013-18%20-%20Decision%20Support%20for%20Application%20Migration%20to%20the%20Cloud%20Challenges%20and%20Vision.pdf">an approach of Andrikopoulos et al.</a> 
-									considering a vision of a decision support system for Cloud migration. 
-									By this, decision makers are supported through focusing on <i>decisions</i> and supporting <i>tasks</i> that are important to be 
-									addressed when intending an application migration to the Cloud.
-								</p>
-								<p>
-									The CloudDSF comprises 17 decisions grouped in four main decision points and a total of 10 supporting tasks. 
-									The elements constitute a network where decisions are influencing each other and decisions and tasks can affect each other. 
-								</p>
-							</div>
-							<div class="col-md-2"></div>
-							<div class="col-md-5">
-								<h3>About</h3>
-								<p>
-									This website is part of the Master's Thesis
-									<i>Decision Support for Application Migration to the Cloud</i>
-									at <a href="http://www.iaas.uni-stuttgart.de" target="_blank">IAAS (University Stuttgart)</a>
-									by Alexander Darsow.
-								</p>
-								<p>
-									The main objective of the Master’s Thesis was the elaboration and refinement of a conceptual view 
-									of a decision support system for Cloud migration. 
-								</p>
-								<p>
-									As part of this work a prototypical implementation of the visualization was required that is published under the name CloudDSF by this website.
-								</p>
-							</div>
-						</div>
-					</div>
-
+		<div id="headerWrapper">
+			<div id="headerBox">
+				<div class="container">
+					<ul id="headerNav">
+						<li><a class="brandName" href="./">The CloudDSF</a></li>
+						<li><a class="active" href="./"> <span
+								class="glyphicon glyphicon-home"></span> <span>Home</span>
+						</a></li>
+						<li><a href="./cloudDSFVisualization.html"> <span
+								class="glyphicon glyphicon-picture"></span> <span>Prototypical
+									Implementation</span>
+						</a></li>
+						<li><a href="./about.html"> <span
+								class="glyphicon glyphicon-flag"></span> <span>About</span>
+						</a></li>
+					</ul>
 					<div class="clearfix"></div>
-
-				</div>
-			</div>
-			<div id="footerWrapper">
-				<div id="footerBox">
-					<div class="container">
-						<p>
-							Copyright 2014 Alexander Darsow
-						</p>
-					</div>
 				</div>
 			</div>
 		</div>
+		<div id="mainWrapper">
+			<div id="mainBox" class="sizeMarginBox">
 
-	</body>
+				<div class="container">
+					<div class="jumbotron">
+						<h1>The Cloud Decision Support Framework</h1>
+						<p>The Cloud Decision Support Framework (CloudDSF) helps
+							decision makers, who consider the migration of an existing
+							application to the Cloud.</p>
+						<p>
+							<a href="./cloudDSFVisualization.html"
+								class="btn btn-primary btn-lg" role="button">Prototypical
+								Implementation</a>
+						</p>
+					</div>
+				</div>
+
+				<div class="container centered">
+					<img src="./img/layout/titleImage.png" alt="CloudDSF Title Images" />
+				</div>
+
+				<div class="container">
+					<div class="row">
+						<div class="col-md-5">
+							<h3>Main Approach</h3>
+							<p>
+								The CloudDSF is based on <a
+									href="http://www.iaas.uni-stuttgart.de/RUS-data/INPROC-2013-18%20-%20Decision%20Support%20for%20Application%20Migration%20to%20the%20Cloud%20Challenges%20and%20Vision.pdf">an
+									approach of Andrikopoulos et al.</a> considering a vision of a
+								decision support system for Cloud migration. By this, decision
+								makers are supported through focusing on <i>decisions</i> and
+								supporting <i>tasks</i> that are important to be addressed when
+								intending an application migration to the Cloud.
+							</p>
+							<p>The CloudDSF comprises 17 decisions grouped in four main
+								decision points and a total of 10 supporting tasks. The elements
+								constitute a network where decisions are influencing each other
+								and decisions and tasks can affect each other.</p>
+						</div>
+						<div class="col-md-2"></div>
+						<div class="col-md-5">
+							<h3>About</h3>
+							<p>
+								This website is part of the Master's Thesis <i>Decision
+									Support for Application Migration to the Cloud</i> at <a
+									href="http://www.iaas.uni-stuttgart.de" target="_blank">IAAS
+									(University Stuttgart)</a> by Alexander Darsow.
+							</p>
+							<p>The main objective of the Master’s Thesis was the
+								elaboration and refinement of a conceptual view of a decision
+								support system for Cloud migration.</p>
+							<p>As part of this work a prototypical implementation of the
+								visualization was required that is published under the name
+								CloudDSF by this website.</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="clearfix"></div>
+
+			</div>
+		</div>
+		<hr>
+		<footer class="footer">
+			<div class="container">
+				<p>Copyright 2014 Alexander Darsow</p>
+			</div>
+		</footer>
+	</div>
+
+</body>
 </html>
