Minor changes and deletion of old background file

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -17,7 +17,7 @@ limitations under the License.
 <html>
 <head>
 <meta charset="UTF-8">
-<title>The CloudDSF : : About</title>
+<title>The CloudDSF - About</title>
 
 <!-- Style Sheets - Bootstrap -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
