--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -17,7 +17,7 @@ limitations under the License.
 <html>
 <head>
 <meta charset="UTF-8">
-<title>The CloudDSF : : The Cloud Decision Support Framework</title>
+<title>The CloudDSF - The Cloud Decision Support Framework</title>
 
 <!-- Style Sheets - Bootstrap -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
