Update of HTML Head / Meta and adding new navbar entry

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -14,9 +14,11 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The CloudDSF - About</title>
 
 <!-- Style Sheets - Bootstrap -->
@@ -54,9 +56,12 @@ limitations under the License.
 					<li><a href="./index.html"><span
 							class="glyphicon glyphicon-home"></span> <span>Home</span><span
 							class="sr-only">(current)</span></a></li>
+					<li><a href="./cloudDSFPrototype.html"> <span
+							class="glyphicon glyphicon-globe"></span> <span>CloudDSF
+								Prototype</span></a></li>
 					<li><a href="./cloudDSFVisualization.html"> <span
-							class="glyphicon glyphicon-picture"></span> <span>Prototypical
-								Implementation</span></a></li>
+							class="glyphicon glyphicon-picture"></span> <span>Legacy
+								Visualizations</span></a></li>
 					<li class="active"><a href="./about.html"> <span
 							class="glyphicon glyphicon-flag"></span> <span>About</span>
 					</a></li>
