--- a/WebContent/cloudDSFVisualization.html
+++ b/WebContent/cloudDSFVisualization.html
@@ -14,10 +14,12 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>The CloudDSF - Prototypical Implementation</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>The CloudDSF - Legacy Visualizations</title>
 
 <!-- Style Sheets - Bootstrap -->
 <link href="./css/bootstrap.min.css" rel="stylesheet" />
@@ -43,7 +45,6 @@ limitations under the License.
 
 </head>
 <body>
-
 	<header class="navbar navbar-default navbar-static-top"
 		role="navigation">
 		<div class="container">
@@ -65,17 +66,19 @@ limitations under the License.
 					<li><a href="./index.html"><span
 							class="glyphicon glyphicon-home"></span> <span>Home</span><span
 							class="sr-only">(current)</span></a></li>
-					<li class="active"><a href="./cloudDSFVisualization.html">
-							<span class="glyphicon glyphicon-picture"></span> <span>Prototypical
-								Implementation</span>
-					</a></li>
+					<li><a href="./cloudDSFPrototype.html"> <span
+							class="glyphicon glyphicon-globe"></span> <span>CloudDSF Prototype</span></a></li>
+					<li class="active"><a href="./cloudDSFVisualization.html"> <span
+							class="glyphicon glyphicon-picture"></span> <span>Legacy
+								Visualizations</span></a></li>
 					<li><a href="./about.html"> <span
 							class="glyphicon glyphicon-flag"></span> <span>About</span>
 					</a></li>
-
 				</ul>
 			</nav>
+			<!-- /.navbar-collapse -->
 		</div>
+		<!-- /.container-fluid -->
 	</header>
 
 	<div class="container">
@@ -110,54 +113,53 @@ limitations under the License.
 		</div>
 	</div>
 	<hr style="margin-bottom: 0px;">
-
-	<div id="visContentDIV">
-		<div id="visContent"></div>
-	</div>
-	<div id="visRightDIV">
-		<div class="visPanel">
-			<div class="visPanelHeader">
-				<div class="visPanelHeaderIconLeft">
-					<a id="visPanelSettingsIconToogle" href="#"> <span
-						class="glyphicon glyphicon-cog"></span>
-					</a>
-				</div>
-				<div class="visPanelHeaderLabel">
-					<a id="visPanelSettingsLabelToogle" href="#"> <span>Settings</span>
-					</a>
-				</div>
-				<div class="clearfix"></div>
-			</div>
-			<div id="visPanelSettingsContent" class="visPanelContent"></div>
+		<div id="visContentDIV">
+			<div id="visContent"></div>
 		</div>
-
-		<div class="visPanel">
-			<div class="visPanelHeader">
-				<div class="visPanelHeaderIconLeft">
-					<a id="visPanelInfoIconToogle" href="#"> <span
-						class="glyphicon glyphicon-info-sign"></span>
-					</a>
+		<div id="visRightDIV">
+			<div class="visPanel">
+				<div class="visPanelHeader">
+					<div class="visPanelHeaderIconLeft">
+						<a id="visPanelSettingsIconToogle" href="#"> <span
+							class="glyphicon glyphicon-cog"></span>
+						</a>
+					</div>
+					<div class="visPanelHeaderLabel">
+						<a id="visPanelSettingsLabelToogle" href="#"> <span>Settings</span>
+						</a>
+					</div>
+					<div class="clearfix"></div>
 				</div>
-				<div class="visPanelHeaderLabel">
-					<a id="visPanelInfoLabelToogle" href="#"> <span>Information</span>
-					</a>
-				</div>
-				<div class="clearfix"></div>
+				<div id="visPanelSettingsContent" class="visPanelContent"></div>
 			</div>
 
-			<div id="visRightContent" class="visPanelContent">
-				<div id="visInfoLabelBOX">
-					<div id="visInfoLabelTextBOX">
-						<h3>Select Service Provider / Offering</h3>
+			<div class="visPanel">
+				<div class="visPanelHeader">
+					<div class="visPanelHeaderIconLeft">
+						<a id="visPanelInfoIconToogle" href="#"> <span
+							class="glyphicon glyphicon-info-sign"></span>
+						</a>
 					</div>
-					<div id="visInfoLabelTypeBOX" class="">
-						<span>Decision</span>
+					<div class="visPanelHeaderLabel">
+						<a id="visPanelInfoLabelToogle" href="#"> <span>Information</span>
+						</a>
 					</div>
+					<div class="clearfix"></div>
 				</div>
 
+				<div id="visRightContent" class="visPanelContent">
+					<div id="visInfoLabelBOX">
+						<div id="visInfoLabelTextBOX">
+							<h3>Select Service Provider / Offering</h3>
+						</div>
+						<div id="visInfoLabelTypeBOX" class="">
+							<span>Decision</span>
+						</div>
+					</div>
+
+				</div>
 			</div>
 		</div>
-	</div>
 	<div class="clearfix"></div>
 	<hr style="margin-top: 0px">
 	<footer class="footer">
