Remove of one div in the main conentent. No fixed width for the whole content. Fixed width and height for the svg now in the javascript

--- a/WebContent/cloudDSFVisualization.html
+++ b/WebContent/cloudDSFVisualization.html
@@ -67,10 +67,12 @@ limitations under the License.
 							class="glyphicon glyphicon-home"></span> <span>Home</span><span
 							class="sr-only">(current)</span></a></li>
 					<li><a href="./cloudDSFPrototype.html"> <span
-							class="glyphicon glyphicon-globe"></span> <span>CloudDSF Prototype</span></a></li>
-					<li class="active"><a href="./cloudDSFVisualization.html"> <span
-							class="glyphicon glyphicon-picture"></span> <span>Legacy
-								Visualizations</span></a></li>
+							class="glyphicon glyphicon-globe"></span> <span>CloudDSF
+								Prototype</span></a></li>
+					<li class="active"><a href="./cloudDSFVisualization.html">
+							<span class="glyphicon glyphicon-picture"></span> <span>Legacy
+								Visualizations</span>
+					</a></li>
 					<li><a href="./about.html"> <span
 							class="glyphicon glyphicon-flag"></span> <span>About</span>
 					</a></li>
@@ -113,11 +115,11 @@ limitations under the License.
 		</div>
 	</div>
 	<hr style="margin-bottom: 0px;">
-		<div id="visContentDIV">
-			<div id="visContent"></div>
-		</div>
-		<div id="visRightDIV">
-			<div class="visPanel">
+	<div class="container-fluid">
+		<div class="row">
+			<div id="visContent" class="col-lg-9"></div>
+			<div id="visRightDIV" class="col-lg-3">
+
 				<div class="visPanelHeader">
 					<div class="visPanelHeaderIconLeft">
 						<a id="visPanelSettingsIconToogle" href="#"> <span
@@ -131,9 +133,7 @@ limitations under the License.
 					<div class="clearfix"></div>
 				</div>
 				<div id="visPanelSettingsContent" class="visPanelContent"></div>
-			</div>
 
-			<div class="visPanel">
 				<div class="visPanelHeader">
 					<div class="visPanelHeaderIconLeft">
 						<a id="visPanelInfoIconToogle" href="#"> <span
@@ -156,11 +156,11 @@ limitations under the License.
 							<span>Decision</span>
 						</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
-	<div class="clearfix"></div>
+	</div>
+<!-- 	<div class="clearfix"></div> -->
 	<hr style="margin-top: 0px">
 	<footer class="footer">
 		<div class="container">
