New navigation point knowledge base

--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -59,6 +59,9 @@ limitations under the License.
 					<li><a href="./cloudDSFPrototype.html"> <span
 							class="glyphicon glyphicon-globe"></span> <span>CloudDSF
 								Prototype</span></a></li>
+					<li><a href="./knowledgeBase.html"> <span
+							class="glyphicon glyphicon-book"></span> <span>Knowledge
+								Base</span></a></li>
 					<li><a href="./cloudDSFVisualization.html"> <span
 							class="glyphicon glyphicon-picture"></span> <span>Legacy
 								Visualizations</span></a></li>
