--- a/WebContent/cloudDSFVisualization.html
+++ b/WebContent/cloudDSFVisualization.html
@@ -69,6 +69,9 @@ limitations under the License.
 					<li><a href="./cloudDSFPrototype.html"> <span
 							class="glyphicon glyphicon-globe"></span> <span>CloudDSF
 								Prototype</span></a></li>
+					<li><a href="./knowledgeBase.html"> <span
+							class="glyphicon glyphicon-book"></span> <span>Knowledge
+								Base</span></a></li>
 					<li class="active"><a href="./cloudDSFVisualization.html">
 							<span class="glyphicon glyphicon-picture"></span> <span>Legacy
 								Visualizations</span>
@@ -160,7 +163,7 @@ limitations under the License.
 			</div>
 		</div>
 	</div>
-<!-- 	<div class="clearfix"></div> -->
+	<!-- 	<div class="clearfix"></div> -->
 	<hr style="margin-top: 0px">
 	<footer class="footer">
 		<div class="container">
