--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -54,10 +54,10 @@
 					<li><a href="./index.html"><span
 							class="glyphicon glyphicon-home"></span> <span>Home</span><span
 							class="sr-only">(current)</span></a></li>
-					<li class="active"><a href="./cloudDSFPrototype.html"> <span
+					<li><a href="./cloudDSFPrototype.html"> <span
 							class="glyphicon glyphicon-globe"></span> <span>CloudDSF
 								Prototype</span></a></li>
-					<li><a href="./knowledgeBase.html"> <span
+					<li class="active"><a href="./knowledgeBase.html"> <span
 							class="glyphicon glyphicon-book"></span> <span>Knowledge
 								Base</span></a></li>
 					<li><a href="./cloudDSFVisualization.html"> <span
@@ -121,7 +121,7 @@
 
 	<!-- Include for Visualization -->
 	<!-- 	<script src="js.cdsfPlus.js" type="text/javascript"></script> -->
- 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script> 
+	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
 
 </body>
 </html>
