--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -5,10 +5,6 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>The CloudDSF - Prototype</title>
-
-<!-- Bootstrap -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
-
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -21,6 +17,8 @@
 <!-- Style Sheets - DSAMC -->
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 <link href="./css/prototypeLayout.css" rel="stylesheet" />
+<link href="./css/knowledgeBase.css" rel="stylesheet" />
+
 
 <!-- JavaScript - jQuery -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
@@ -66,17 +64,6 @@
 					<li><a href="./about.html"> <span
 							class="glyphicon glyphicon-flag"></span> <span>About</span>
 					</a></li>
-					<!-- 					<li class="dropdown"><a href="#" class="dropdown-toggle"
-						data-toggle="dropdown" role="button" aria-expanded="false">Dropdown
-							<span class="caret"></span>
-					</a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="#">Something else here</a></li>
-							<li class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-							<li class="divider"></li>
-							<li><a href="#">One more separated link</a></li>
-						</ul></li> -->
 				</ul>
 			</nav>
 			<!-- /.navbar-collapse -->
@@ -85,27 +72,33 @@
 	</header>
 
 	<div class="container-fluid">
-		<div class="row row-offcanvas row-offcanvas-left">
+		<div class="row row-offcanvas row-offcanvas-left active">
 			<div class="col-md-2 sidebar-offcanvas" id="sidebar"
 				role="navigation">
 				<div class="list-group">
-					<a href="#" class="list-group-item active">Link</a> <a href="#"
+					<a id="buttonTree" href="#" class="list-group-item active">Tree Layout</a> <a href="#"
 						class="list-group-item">Link</a> <a href="#"
 						class="list-group-item">Link</a>
 				</div>
 				<button id="toggleButton" type="button"
 					class="btn btn-primary btn-xs" data-toggle="offcanvas">
-
-					<span class="glyphicon glyphicon-chevron-right"></span>
+					<span class="glyphicon glyphicon-chevron-left"></span>
 				</button>
 			</div>
 			<!--/.sidebar-offcanvas-->
-			<div class="col-md-11">
-				<div class="jumbotron">
-					<h1>Hello, world!</h1>
-					<p>This is an example to show the potential of an offcanvas
-						layout pattern in Bootstrap. Try some responsive-range viewport
-						sizes to see it in action.</p>
+
+			<div class="col-md-10">
+				<div class="row">
+					<div class="col-md-12 text-left">
+						<div class="btn-group">
+						<!-- 	<button id="buttonTree" type="button" class="btn btn-primary">Tree</button> -->
+<!-- 							<button id="buttonPartition" type="button" class="btn btn-info">Partition</button>
+							<button id="buttonTreeMap" type="button" class="btn btn-sucess">TreeMap</button> -->
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div id="visContent" class="col-md-10"></div>
 				</div>
 			</div>
 		</div>
@@ -120,7 +113,7 @@
 	</footer>
 
 	<!-- Include for Visualization -->
-	<!-- 	<script src="js.cdsfPlus.js" type="text/javascript"></script> -->
+	<script src="js/treeLayout.js" type="text/javascript"></script>
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
 
 </body>
