--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -17,8 +17,8 @@
 <!-- Style Sheets - DSAMC -->
 <link href="./css/cdsfPlus.css" rel="stylesheet" />
 <link href="./css/prototypeLayout.css" rel="stylesheet" />
-<link href="./css/knowledgeBase.css" rel="stylesheet" />
-
+<!-- <link href="./css/knowledgeBase.css" rel="stylesheet" /> -->
+<link href="./css/f2.css" rel="stylesheet" />
 
 <!-- JavaScript - jQuery -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
