--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -102,7 +102,7 @@
 			<div class="col-md-10">
 				<div class="row">
 					<div class="col-md-12 text-left">
-						<div id="toolbarDecisions">
+						<div id="toolbarDecisions" class="hidden">
 							<div id="buttonGroupRelations" class="btn-group">
 								<!-- data-toggle="buttons"> -->
 								
