--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -28,7 +28,7 @@
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap-multiselect.js" type="text/javascript"></script>
-<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
+<script src="./js/lib/d3.4.13.js" type="text/javascript"></script>
 <script src="./js/lib/d3tip.js" type="text/javascript"></script>
 </head>
 
