--- a/WebContent/kbNavigator.html
+++ b/WebContent/kbNavigator.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body style="min-width: 1600px">
+<body>
 	<!-- Navigation -->
 	<header class="navbar navbar-inverse navbar-static-top "
 		role="navigation">
